k8s/monitoring/ingresses/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring-ns
spec:
  rules:
    - host: grafana.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
# Para que funcione, hay que habilitar el addon de ingress en minikube: minikube addons enable ingress
# Luego, hay que añadir la siguiente línea al archivo /etc/hosts de tu máquina local:
# 192.168.49.2 grafana.local
